--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "cake_web",
   "version": "1.0.0",
   "description": "cake web",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "node-sass --watch src/resoure/scss/app.scss src/public/css/app.css",
+    "start": "nodemon --inspect src/index.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +17,13 @@
   "bugs": {
     "url": "https://github.com/huaquanghuy111/cake_web/issues"
   },
-  "homepage": "https://github.com/huaquanghuy111/cake_web#readme"
+  "homepage": "https://github.com/huaquanghuy111/cake_web#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "express-handlebars": "^5.3.2",
+    "mongoose": "^5.12.7",
+    "morgan": "^1.10.0",
+    "node-sass": "^5.0.0",
+    "nodemon": "^2.0.7"
+  }
 }
