--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
+    "express-session": "^1.17.2",
     "mongoose": "^5.12.7",
     "morgan": "^1.10.0",
     "node-sass": "^5.0.0",
